# in_hand_scanning

openpose_ros/: CMakeLists.txt  package.xml
openpose_ros/include/: cam_motion_tracker.h  grasping_detector.h  hand_keypoint.h  hand_keypoint_detector.h  keyframe.h  motion_tracker.h  point_cloud_processor.h  touch_detector.h
openpose_ros/include/bk/: cam_motion_tracker_pnp.h
openpose_ros/msg/: keypoint.msg
openpose_ros/src/: cam_motion_tracker.cpp  hand_keypoint_detector.cpp  motion_tracker.cpp  openpose_ros_node_finger.cpp  openpose_ros_node_finger.cpp~  openpose_ros_node_finger_points.cpp  openpose_ros_node_finger_points.cpp~  openpose_ros_node_with_face_and_hands.cpp  system.cpp
openpose_ros/src/bk/: cam_motion_tracker_pnp.cpp  openpose_ros_node.cpp  openpose_ros_node_finger.cpp
pcl_scanning/: CMakeLists.txt  CMakeLists.txt~  package.xml
pcl_scanning/include/: cam_motion_tracker.h  cam_motion_tracker.h~  finger_detection.h  finger_detection.h~  finger_position_tracker.h  finger_position_tracker.h~  object_edge_detector.h  object_edge_detector.h~  object_pose_detector.h  object_pose_detector.h~  object_pose_tracker.h  object_pose_tracker.h~
pcl_scanning/src/: 3D_edge_detection.cpp  cam_motion_tracker.cpp  cam_motion_tracker.cpp~  depthedge.cpp  depthedge.cpp~  finger_detection.cpp  finger_detection.cpp~  finger_position_tracker.cpp  finger_position_tracker.cpp~  get_object_coordinate.cpp  get_object_coordinate.cpp~  hand_transform.cpp  hand_transform.cpp~  object_edge_detector.cpp  object_edge_detector.cpp~  object_pose_detector.cpp  object_pose_detector.cpp~  object_pose_tracker.cpp  object_pose_tracker.cpp~  system.cpp  system.cpp~
pcl_scanning/src/noneed/: hand_transform.cpp  object_pose_detectorbk.cpp  regi.cpp  systembk.cpp
